<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="display"
        android:title="@string/display_category">
        <SwitchPreference
            android:key="fps_info"
            android:icon="@drawable/ic_fps_info"
            android:title="@string/fps_info_title"
            android:summary="@string/fps_info_summary"
            android:persistent="true" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="speaker"
        android:title="@string/speaker_category">
        <Preference
            android:key="clear_speaker_settings"
            android:title="@string/clear_speaker_title"
            android:summary="@string/clear_speaker_summary"
            android:icon="@drawable/ic_sound" >
            <intent
                android:action="android.intent.action.MAIN"
                android:targetClass="com.outsiders.samsungextras.speaker.ClearSpeakerActivity"
                android:targetPackage="com.outsiders.samsungextras" />
        </Preference>
        <Preference
            android:key="dolby_settings"
            android:title="@string/dolby_title"
            android:summary="@string/dolby_summary"
            android:icon="@drawable/ic_speaker_cleaner_icon" >
            <intent
                android:action="android.intent.action.MAIN"
                android:targetClass="com.outsiders.samsungextras.dolby.DolbyActivity"
                android:targetPackage="com.outsiders.samsungextras" />
        </Preference>
    </PreferenceCategory>
    <PreferenceCategory
        android:key="fastcharge"
        android:title="@string/fastcharge_category">
        <Preference
            android:key="battery_settings"
            android:title="@string/fastcharge_title"
            android:icon="@drawable/ic_bolt"
            android:summary="@string/fastcharge_summary"
            android:persistent="true">
        <intent
            android:action="android.intent.action.MAIN"
            android:targetClass="com.outsiders.samsungextras.battery.BatteryActivity"
            android:targetPackage="com.outsiders.samsungextras" />
        </Preference>

    </PreferenceCategory>
</PreferenceScreen>
